# azonices

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.zed/: settings.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs
crates/core/src/models/: base.rs  mod.rs  transaction.rs
crates/core/src/models/compartment/: mod.rs
crates/core/src/models/entry/: mod.rs
crates/core/src/models/filter/: mod.rs
crates/core/src/models/graph/: mod.rs  prelude.rs
crates/core/src/models/label/: mod.rs
crates/core/src/models/space/: mod.rs  prelude.rs
crates/core/src/models/vault/: mod.rs  prelude.rs
crates/core/src/pristine/: change_id.rs  encyc.rs  errors.rs  mod.rs  prelude.rs  pristine.rs  txn.rs
crates/core/src/pristine/sanakirja/: mod.rs  prelude.rs  register.rs  strings.rs  types.rs
crates/core/src/traits/: mod.rs  mut_txn.rs  txn.rs
crates/core/src/types/: change_id.rs  hash.rs  l64.rs  merkle.rs  mod.rs  prelude.rs  strings.rs  uid.rs
crates/x/: Cargo.toml
crates/x/src/: lib.rs  path.rs
