[package]
name = "azoni-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
data-encoding.workspace = true
lazy_static.workspace = true
log = { workspace = true, features = ["serde"] }
parking_lot = "0.12.1"
rand.workspace = true
sanakirja = { version = "1.3.3", features = ["lazy_static", "uuid"] }
serde = { workspace = true, features = ["serde_derive"] }
thiserror.workspace = true
thiserror-impl.workspace = true
